--- a/app/src/main/res/layout/main_pelanggan.xml
+++ b/app/src/main/res/layout/main_pelanggan.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:padding="10dp"
     android:layout_height="match_parent">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="441234567890"
         android:textStyle="bold"
         android:textSize="15dp"
+        android:textColor="#0C74AC"
         android:id="@+id/idpel"/>
     <TextView
         android:layout_width="match_parent"
@@ -15,7 +18,7 @@
         android:text="SIFULAN"
         android:textStyle="bold"
         android:textSize="20dp"
-        android:textColor="#0000FF"
+        android:textColor="#068126"
         android:id="@+id/nama"/>
     <TextView
         android:layout_width="match_parent"
